# lmlang

./: .gitignore  README.md
.cargo/: config.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.2-REQUIREMENTS.md
.planning/phases/01-core-graph-data-model/: 01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md
.planning/phases/02-storage-persistence/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md
.planning/phases/03-type-checking-graph-interpreter/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-ai-agent-tool-api/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  STACK.md
.planning/workflow-runs/: quick-mlu1lm8o-a9e2af.json
crates/lmlang-check/: Cargo.toml
crates/lmlang-check/src/: lib.rs
crates/lmlang-check/src/contracts/: check.rs  mod.rs  property.rs
crates/lmlang-check/src/interpreter/: error.rs  eval.rs  mod.rs  state.rs  trace.rs  value.rs
crates/lmlang-check/src/typecheck/: coercion.rs  diagnostics.rs  mod.rs  rules.rs
crates/lmlang-cli/: Cargo.toml
crates/lmlang-cli/src/: main.rs
crates/lmlang-codegen/: Cargo.toml
crates/lmlang-codegen/src/: codegen.rs  compiler.rs  error.rs  incremental.rs  lib.rs  linker.rs  runtime.rs  types.rs
crates/lmlang-codegen/tests/: integration_tests.rs
crates/lmlang-core/: Cargo.toml
crates/lmlang-core/src/: edge.rs  error.rs  function.rs  graph.rs  id.rs  lib.rs  module.rs  node.rs  ops.rs  type_id.rs  types.rs
crates/lmlang-server/: Cargo.toml
crates/lmlang-server/src/: agent_config_store.rs  autonomous_runner.rs  autonomy_executor.rs  autonomy_planner.rs  error.rs  lib.rs  llm_provider.rs  main.rs  project_agent.rs  router.rs  service.rs  state.rs  undo.rs
crates/lmlang-server/src/concurrency/: agent.rs  conflict.rs  lock_manager.rs  mod.rs  verify.rs
crates/lmlang-server/src/handlers/: agent_control.rs  agents.rs  compile.rs  contracts.rs  dashboard.rs  history.rs  locks.rs  mod.rs  mutations.rs  observability.rs  programs.rs  queries.rs  simulate.rs  verify.rs
crates/lmlang-server/src/schema/: agent_control.rs  agents.rs  autonomy_execution.rs  autonomy_plan.rs  common.rs  compile.rs  contracts.rs  dashboard.rs  diagnostics.rs  history.rs  locks.rs  mod.rs  mutations.rs  observability.rs  programs.rs  queries.rs  simulate.rs  verify.rs
crates/lmlang-server/static/dashboard/: app.js  index.html  styles.css
crates/lmlang-server/static/observability/: app.js  index.html  styles.css
crates/lmlang-server/tests/: concurrency.rs  integration_test.rs
crates/lmlang-storage/: Cargo.toml
crates/lmlang-storage/src/: convert.rs  dirty.rs  error.rs  hash.rs  lib.rs  memory.rs  schema.rs  sqlite.rs  traits.rs  types.rs
crates/lmlang-storage/src/migrations/: 001_initial_schema.sql  002_edit_history.sql  003_agent_config_store.sql
docs/: dashboard-operator-guide.md  language-architecture.md
docs/api/: operator-endpoints.md
landing-site/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
landing-site/src/: App.tsx  index.css
scripts/: start-server.sh
(+122 files in other folders)
