[package]
name = "lmlang-check"
version = "0.1.0"
edition = "2021"

[dependencies]
lmlang-core = { path = "../lmlang-core" }
petgraph = { version = "0.8", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
proptest = "1.10"
indexmap = "2"
