[package]
name = "lmlang-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lmlang"
path = "src/main.rs"

[dependencies]
lmlang-codegen = { path = "../lmlang-codegen" }
lmlang-core = { path = "../lmlang-core" }
lmlang-storage = { path = "../lmlang-storage" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
