[package]
name = "lmlang-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
lmlang-core = { path = "../lmlang-core" }
lmlang-check = { path = "../lmlang-check" }
lmlang-storage = { path = "../lmlang-storage" }
blake3 = "1.8"
petgraph = { version = "0.8", features = ["serde-1"] }
thiserror = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
indexmap = "2"
