[package]
name = "lmlang-core"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = { version = "0.8", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
smallvec = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
proptest = "1.10"
insta = { version = "1", features = ["json"] }
