[package]
name = "lmlang-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lmlang-core = { path = "../lmlang-core" }
lmlang-check = { path = "../lmlang-check" }
lmlang-codegen = { path = "../lmlang-codegen" }
lmlang-storage = { path = "../lmlang-storage" }
dashmap = "6"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
petgraph = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
