[package]
name = "lmlang-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
lmlang-core = { path = "../lmlang-core" }
petgraph = { version = "0.8", features = ["serde-1"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
